# study-guard

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json
browser-extension/: background.js  manifest.json
scripts/: install_native_messaging.ps1
src/: config-ui.ts  main.ts  status.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio.rs  classifier.rs  config.rs  idle.rs  lib.rs  main.rs  monitor.rs  native_host.rs  native_messaging.rs  paths.rs  reminder_policy.rs  tray.rs  url_provider.rs  windows.rs
