[package]
name = "study_guardian"
version = "0.1.0"
description = "学习守门员"
authors = ["YS"]
edition = "2021"
build = "build.rs"
default-run = "study_guardian"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-single-instance = "2"
url = "2"
image = { version = "0.25", default-features = false, features = ["png"] }
rodio = "0.20"
tts = "0.26"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
  "Win32_Foundation",
  "Win32_System_SystemInformation",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_WindowsAndMessaging"
] }
